--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="mini_fab_disable">Disable selected overlay(s)</string>
     <string name="selected_toggle_complete">Selected overlay(s) have been toggled</string>
     <string name="nothing_selected">No overlay(s) selected</string>
+    <string name="andromeda_crashed">Andromeda crashed, probably the server is inactive at the moment.</string>
+    <string name="andromeda_denied">Andromeda access permission has been denied.</string>
+    <string name="oops">Oops!</string>
 </resources>
