--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="fab_disable">Disable selected overlay(s)</string>
     <string name="fab_enable">Enable selected overlay(s)</string>
     <string name="fab_toggle">Toggle selected overlay(s)</string>
+    <string name="fab_uninstall">Uninstall selected overlay(s)</string>
     <string name="not_meant_for_you">You\'re not supposed to be seeing this. Please report to the dev if you do.</string>
     <string name="nothing_selected">No overlay(s) selected</string>
     <string name="oops">Oops!</string>
